Add new branch to Action

--- a/.github/workflows/jest-tests.yml
+++ b/.github/workflows/jest-tests.yml
@@ -5,7 +5,7 @@ name: Jest Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, chapter* ]
   pull_request:
     branches: [ master ]
 
