--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "local-web-server": "^4.2.1",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-      "jest": "~26.0.1"
+    "bopen-cli": "^1.2.3",
+    "jest": "~26.0.1"
   }
 }
